fix(global-css): remove ul margin on mobile devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -251,6 +251,10 @@
 }
 
 @media (max-width: 600px) {
+  .flex-grid ul {
+    margin-right: 0;
+  }
+
   .checkout {
     width: 100%;
     padding: 0 50px 0;
